--- a/style.css
+++ b/style.css
@@ -3,24 +3,64 @@
   margin: 0;
 }
 
+body,
+html {
+  height: 100%;
+}
+
 body {
   background-color: #fff;
 }
 
-.main-container {
-  width: 80%;
-  background-color: #7777777a;
-  border-radius: 10px;
-  margin: 10px auto;
-  height: 700px;
+.container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  background: green;
 }
 
-.left-container {
-  width: 20%;
-  background-color: #555;
+.row {
+  display: flex;
+  background-color: red;
+  /* align-items: center;
+  justify-content: center; */
 }
 
-.right-container {
-  width: 80%;
-  background-color: #333;
+.row-item-1 {
+  background-color: grey;
+  flex: 1;
+}
+
+.row-item-2 {
+  background-color: lightgrey;
+  flex: 3;
+  align-self: stretch;
+}
+
+.scheduled-item-1 {
+  display: flex;
+  justify-content: space-between;
+}
+
+.scheduled-item-2 {
+  display: flex;
+  justify-content: space-between;
+}
+
+.scheduled-item-1 a,
+.scheduled-item-2 a {
+  background-color: blue;
+  color: white;
+  padding: 4px;
+}
+
+header {
+  border-bottom: 2px solid black;
+}
+
+.list-item {
+  display: flex;
+  align-items: center;
+  gap: 20px;
 }
