playing around with flex

--- a/style.css
+++ b/style.css
@@ -1,6 +1,14 @@
+/* 
+  DEFAULTS:
+  flex-grow: 0;
+  flex-shrink: 1;
+  flex-basis: auto;
+  */
+
 * {
   padding: 0;
   margin: 0;
+  box-sizing: border-box;
 }
 
 body,
@@ -63,4 +71,10 @@ header {
   display: flex;
   align-items: center;
   gap: 20px;
+}
+
+/* RIGHT CONTAINER */
+.icon-add {
+  display: flex;
+  align-items: flex-end;
 }
