--- a/apple/css/general.css
+++ b/apple/css/general.css
@@ -73,18 +73,22 @@ body {
   font-size: 1.8rem;
   height: 100vh;
   background-color: #7c44ff;
+}
 
+.container-outer {
+  height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-.container {
-  background-color: aliceblue;
+.container-inner {
+  background-color: #fff;
   width: 90rem;
   height: 55.5rem;
   border-radius: 16px;
   padding: 0.8rem 0.8rem 0.4rem 0.8rem;
+  box-shadow: 0, 0, 5px, rgba(0, 0, 0, 0.7);
 
   display: grid;
   grid-template-columns: 27.5rem 1fr;
@@ -94,4 +98,5 @@ body {
 main {
   grid-column: 2 / -1;
   grid-row: 2 / -1;
+  box-shadow: 2px, 2px, 5px, rgba(0, 0, 0, 0.7);
 }
