--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ Medium: 11px
 - Spacing system (px)
 2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128
 */
-/* https://www.w3schools.com/howto/howto_js_todolist.asp */
+
 * {
   padding: 0;
   margin: 0;
@@ -84,6 +84,7 @@ body {
 
 .header {
   margin-top: 4.8rem;
+  text-align: center;
 }
 
 h1 {
@@ -99,6 +100,8 @@ ul li {
   cursor: pointer;
   user-select: none;
   transition: 0.2s;
+  text-align: justify;
+  position: relative;
 }
 
 li:nth-child(odd) {
@@ -127,4 +130,16 @@ ul li.checked {
 .btn {
   width: 20%;
   cursor: pointer;
+}
+
+.close {
+  position: absolute;
+  right: 0;
+  top: 0;
+  padding: 2px 5px 0px 5px;
+  /* padding-right: 4px; */
+}
+
+.close:hover {
+  color: #fff;
 }
