--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ html {
 
 body {
   font-family: 'Poppins', sans-serif;
-  /* color: #343a40; */
+  background-color: #777;
 
   width: 100%;
   height: 100vh;
@@ -29,6 +29,7 @@ body {
   text-align: center;
   padding: 100px;
   border: 1px solid #333;
+  border-radius: 10px;
   background-color: #fff;
 }
 
