style: background color change

--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body {
   padding: 100px;
   border: 1px solid #333;
   border-radius: 10px;
-  background-color: #fff;
+  background-color: #f8f9fa;
 }
 
 h1 {
